# flyx-server

./: .gitignore  Cargo.toml  README.md
src/: app.rs  app_state.rs  config.rs  lib.rs  main.rs  room.rs  types.rs
src/models/: mod.rs  room.rs
src/models/dtos/: mod.rs  room.rs
src/routes/: mod.rs  room.rs
tests/: api_test.rs
